Prevent PanelBody title from being overlapped by arrow

--- a/packages/components/src/panel/style.scss
+++ b/packages/components/src/panel/style.scss
@@ -77,6 +77,7 @@
 .components-panel__body-toggle.components-button {
 	position: relative;
 	padding: $grid-unit-20;
+	padding-right: 48px;
 	outline: none;
 	width: 100%;
 	font-weight: 500;
